k8s/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: dai-simplon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: streamlit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-svc
                port:
                  number: 80
